--- a/style.css
+++ b/style.css
@@ -20,6 +20,16 @@ body {
     background-color: var(--almost-white);
 }
 
+body.menu-open::before{
+    content:"";
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    color: rgba(rgb(0, 0, 26, 0.5));
+    top: 0;
+    left: 0;
+}
+
 .header-mobile {
     display: flex;
     justify-content: space-between;
@@ -30,6 +40,34 @@ body {
 .header-mobile button {
     border: none;
     background: none;
+    width: fit-content;
+}
+
+.header-mobile nav{
+    position: fixed;
+    background-color: var(--almost-white);
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 16rem;
+    z-index: 999;
+
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    gap: 1.5rem;
+}
+
+.header-mobile nav button{
+    margin-left: auto;
+    margin-bottom: 4rem;
+}
+
+.header-mobile nav a {
+    text-decoration: none;
+    color: var(--dark-blue);
+    font-size: 1.25rem;
+    line-height: 1.5rem;
 }
 
 .primeira-secao {
@@ -98,4 +136,35 @@ body {
     color: var(--silver);
     font-size: 0.9375rem;
     line-height: 1.625rem;
+}
+
+.terceira-secao > div {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.terceira-secao img {
+    max-width: 6.25rem;
+}
+
+.terceira-secao strong {
+    color: var(--silver);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.terceira-secao h2 {
+    color: var(--dark-blue);
+    font-size: 1.125rem;
+    font-weight: 800;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+}
+
+.terceira-secao p {
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
+    color: var(--gunmetal);
 }
