--- a/style.css
+++ b/style.css
@@ -35,12 +35,15 @@ body.escurecer::before{
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
-.header {
+.header button {
     border: none;
     background: none;
-    width: fit-content;
+    width: fit-content; 
 }
 
 .header nav.mobile{
@@ -74,6 +77,11 @@ body.escurecer::before{
     color: var(--dark-blue);
     font-size: 1.25rem;
     line-height: 1.5rem;
+}
+
+main {
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
 .primeira-secao {
@@ -176,7 +184,29 @@ body.escurecer::before{
 }
 
 @media(min-width: 1110px) {
+    main{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1.75rem;
+    }
+    
+    .primeira-secao {
+        grid-column: 1 / 3;
+    }
+
     header > button {
         display: none;
+    }
+ 
+    header.desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header.desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: var(--gunmetal);
     }
 }
